og:description의 선택 범위가 너무 넓어져서 정규식이 최소한으로 선택하도록 수정

--- a/public/ogConfig.json
+++ b/public/ogConfig.json
@@ -13,6 +13,7 @@
     "og:image": "/og_img/event/evt1/meta-ko.png",
     "og:title": "SEO TEST",
     "title": "SEO TEST TITLE",
+    "og:description": "한국어",
     "og:url": "https://d2ea53l1kq1p10.cloudfront.net/event_kr/evt1"
   }
 }
