--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@rollup/plugin-typescript": "^8.3.1",
+    "lightweight-charts": "^3.8.0",
     "quill": "^1.3.6",
     "sirv-cli": "^2.0.0",
     "svelte-routing": "^1.6.0"
