--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "jse52595@gmail.com",
   "license": "ISC",
   "scripts": {
+    "dev1": "rollup -c -w",
     "build": "rollup -c",
     "dev": "sirv public --dev --single",
     "start": "sirv public --no-clear --single",
