--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		"vite": "^5.4.11"
 	},
 	"dependencies": {
+		"fancy-canvas": "^2.1.0",
 		"lightweight-charts": "^4.2.2",
 		"quill": "^2.0.3"
 	}
